--- a/lizard_ui/static/bootstrap/less/bootstrap.css
+++ b/lizard_ui/static/bootstrap/less/bootstrap.css
@@ -2626,7 +2626,7 @@ ul.icons li .icon-large:before {
 .open {
   *z-index: 1000;
 }
-.open  > .dropdown-menu {
+.open > .dropdown-menu {
   display: block;
 }
 .pull-right > .dropdown-menu {
@@ -5574,7 +5574,8 @@ a.workspace-acceptable:focus {
 a.workspace-acceptable .workspace-selected-icon {
   display: none;
 }
-a.workspace-acceptable.selected {
+a.workspace-acceptable.selected,
+a.workspace-acceptable.selected-invisible {
   background-color: #D9D9D6;
 }
 a.workspace-acceptable.selected .workspace-selected-icon {
