--- a/lizard_ui/static/lizard_ui/lizard-bootstrap.less
+++ b/lizard_ui/static/lizard_ui/lizard-bootstrap.less
@@ -392,7 +392,7 @@ ul.tree {
             outline: 1px solid #000;
         }
 
-        &.selected {
+        &.selected{
             background-color: #d9d9d6;
         }
     }
@@ -473,7 +473,8 @@ a.workspace-acceptable:focus {
 a.workspace-acceptable .workspace-selected-icon {
   display: none;
 }
-a.workspace-acceptable.selected {
+a.workspace-acceptable.selected,
+a.workspace-acceptable.selected-invisible, {
   background-color: #D9D9D6;
 }
 a.workspace-acceptable.selected .workspace-selected-icon {
